--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -34,6 +34,7 @@ recyclerview = "1.3.2"
 retrofit = "2.11.0"
 room = "2.6.1"
 sketch-gif = "2.7.1"
+toolbarCompose = "2.3.5"
 viewpager2 = "1.1.0"
 webkit = "1.11.0"
 
@@ -90,6 +91,7 @@ squareup-okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhtt
 squareup-okhttp3-logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttp" }
 squareup-retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 squareup-retrofit-converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
+toolbar-compose = { module = "me.onebone:toolbar-compose", version.ref = "toolbarCompose" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
