--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -24,6 +24,7 @@ junit = "4.13.2"
 junitVersion = "1.1.5"
 kotlin = "2.0.0"
 ksp = "2.0.0-1.0.22"
+leakcanary = "2.14"
 lifecycleRuntimeKtx = "2.8.1"
 material = "1.12.0"
 material3 = "1.3.0-beta02"
@@ -85,6 +86,7 @@ jp-wasabeef-transformers-coil = { module = "jp.wasabeef.transformers:coil", vers
 jsoup = { module = "org.jsoup:jsoup", version.ref = "jsoup" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "kotlin" }
+leakcanary-android = { module = "com.squareup.leakcanary:leakcanary-android", version.ref = "leakcanary" }
 me-zhanghai-android-appiconloader-coil = { group = "me.zhanghai.android.appiconloader", name = "appiconloader-coil", version.ref = "appiconloader-coil" }
 sketch-gif = { module = "me.panpf:sketch-gif", version.ref = "sketch-gif" }
 squareup-okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
