--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -28,6 +28,7 @@ leakcanary = "2.14"
 material = "1.12.0"
 material3 = "1.3.0-beta02"
 okhttp = "4.12.0"
+oss-android-sdk = "2.9.19"
 protobuf = "4.27.1"
 protobufPlugin = "0.9.4"
 recyclerview = "1.3.2"
@@ -87,6 +88,7 @@ junit = { group = "junit", name = "junit", version.ref = "junit" }
 kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "kotlin" }
 leakcanary-android = { module = "com.squareup.leakcanary:leakcanary-android", version.ref = "leakcanary" }
 me-zhanghai-android-appiconloader-coil = { group = "me.zhanghai.android.appiconloader", name = "appiconloader-coil", version.ref = "appiconloader-coil" }
+oss-android-sdk = { module = "com.aliyun.dpa:oss-android-sdk", version.ref = "oss-android-sdk" }
 sketch-gif = { module = "me.panpf:sketch-gif", version.ref = "sketch-gif" }
 squareup-okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 squareup-okhttp3-logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttp" }
