--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,6 +56,10 @@
                     android:pathPattern="/.*"
                     android:scheme="coolmarket" />
                 <data
+                    android:host="collection"
+                    android:pathPattern="/.*"
+                    android:scheme="coolmarket" />
+                <data
                     android:host="apk"
                     android:pathPattern="/.*\\..*"
                     android:scheme="coolmarket" />
